--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-update",
-  "description": "Vue Auth & more",
+  "name": "vue-axios-project",
+  "description": "A simple Vue axios project",
+  "author": "Daley Mottley <daley.mottley@hotmail.com>",
   "version": "1.0.0",
-  "author": "Maximilian Schwarzmüller <business@academind.com>",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
