--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.21.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.4",
     "jade": "*",
     "mongoose": "^5.3.9"
   }
