--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.16.4",
     "vue": "^2.4.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.0"
